// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAttribute does not render action buttons while not editing 1`] = `
<div
  className="attribute file"
>
  <span
    className="file-missing"
  >
     No file 
  </span>
</div>
`;

exports[`FileAttribute renders "missing file" correctly while not editing 1`] = `
<div
  className="attribute file"
>
  <span
    className="file-missing"
  >
     No file 
  </span>
</div>
`;

exports[`FileAttribute renders blank paths correctly while not editing 1`] = `
<div
  className="attribute file"
>
  <span
    className="file-blank"
  >
     Blank file 
  </span>
</div>
`;

exports[`FileAttribute renders existing files correctly when not editing 1`] = `
<div
  className="attribute file"
>
  <span
    className="file-upload"
  >
     
    conquest.txt
     (
    text/plain
    )
     
  </span>
</div>
`;

exports[`FileAttribute renders the button bar while editing 1`] = `
<div
  className="attribute file"
>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <div
    className="file-buttons"
  >
    <span
      className="icon-grp icon-grp-upload  fa-stack fa-fw"
      onClick={[Function]}
      title="Upload a file from your computer"
    >
      <i
        className="icon upload  upload fa fa-2x fa-upload"
      />
    </span>
    <span
      className="icon-grp icon-grp-cloud  fa-stack fa-fw"
      onClick={[Function]}
      title="Link a file from Metis"
    >
      <i
        className="icon cloud  cloud fa fa-2x fa-cloud"
      />
    </span>
    <span
      className="icon-grp icon-grp-stub  fa-stack fa-fw"
      onClick={[Function]}
      title="Mark this file as blank"
    >
      <i
        className="icon stub  meh-blank fa fa-2x fa-meh-blank"
      />
    </span>
    <span
      className="icon-grp icon-grp-remove  fa-stack fa-fw"
      onClick={[Function]}
      title="Remove this file link"
    >
      <i
        className="icon remove  trash-alt fa fa-2x fa-trash-alt"
      />
    </span>
  </div>
  <span
    className="file-missing"
  >
     No file 
  </span>
</div>
`;

exports[`FileAttribute renders upload meter and controls when uploading 1`] = `
<div
  className="attribute file"
>
  <div
    className="list-entry-group upload"
  >
    <div
      className="list-entry-column-group type"
      style={
        Object {
          "flexBasis": "60px",
        }
      }
    >
      <span
        className="icon-grp   fa-stack fa-fw"
      >
        <i
          className="icon undefined  upload fa fa-2x fa-upload"
        />
      </span>
    </div>
    <div
      className="list-entry-column-group name"
      style={
        Object {
          "flexBasis": "60%",
        }
      }
    >
      <span
        className="list-entry-file-name"
      >
        stats.txt
      </span>
    </div>
    <div
      className="list-entry-column-group status"
      style={
        Object {
          "flexBasis": "90px",
        }
      }
    />
    <div
      className="list-entry-column-group updated"
      style={
        Object {
          "flexBasis": "30%",
        }
      }
    >
      <div
        className="upload-meter-group"
      >
        <div
          className="upload-meter-tray"
        >
          <div
            className="upload-meter-bar"
            style={
              Object {
                "width": "NaN%",
              }
            }
          />
        </div>
        <div
          className="upload-meter-status"
        >
          <span
            className="icon-grp icon-grp-active  fa-stack fa-fw"
          >
            <i
              className="icon active  upload fa fa-2x fa-upload"
            />
          </span>
        </div>
        <div
          className="upload-meter-completion"
        >
          <span
            className="completed"
            title="kilobytes uploaded"
          >
            NaN undefinediB
          </span>
           of 
          NaN undefinediB
        </div>
        <div
          className="upload-meter-speed"
        >
          <span
            title="kilobits per second"
          >
            117.2 Kbps
          </span>
        </div>
      </div>
    </div>
    <div
      className="list-entry-column-group size"
      style={
        Object {
          "flexBasis": "10%",
        }
      }
    />
    <div
      className="list-entry-column-group control"
      style={
        Object {
          "flexBasis": "100px",
        }
      }
    >
      <div
        className="upload-control-group"
      >
        <button
          className="upload-control-btn"
          onClick={[Function]}
        >
          <span
            className="fas fa-fw fa-pause"
          />
        </button>
        <button
          className="upload-control-btn"
          onClick={[Function]}
        >
          <span
            className="fas fa-fw fa-times"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
